reconfigurando o serviço de autenticação
